potential fix for elements stuck under mobile url address bar

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -522,7 +522,7 @@ html{
 .pop_up_div{
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-y: scroll;
     background-color: rgba(0,0,0,0.8);
     z-index: 10;
